feat(api): add /friends endpoint
